src/objects/Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>Time_Counting_Method__c</fullName>
        <label>Time Counting Method</label>
        <picklist>
            <picklistValues>
                <fullName>Month And Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Actual Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Overdue__c</fullName>
        <formula>Total_Overdue_Fees__c +  Overdue_Interest__c +  Overdue_Principal__c +  Overdue_Penalty__c + Interest_On_Total_Overdue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Paid__c</fullName>
        <formula>Interest_Paid__c + Principal_Paid__c + Fees_Paid__c +  Penalty_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Remaining__c</fullName>
        <formula>Principal_Remaining__c + Interest_Remaining__c + Fees_Remaining__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Due_Charges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Due Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overdue_Fees__c</fullName>
        <label>Total Overdue Fees</label>
        <summarizedField>Overdue_Fee__c.Overdue_Amount__c</summarizedField>
        <summaryForeignKey>Overdue_Fee__c.Loan_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Uncleared_Disbursal_Amount__c</fullName>
        <description>The disbursed amount, which has not yet been supervised.</description>
        <inlineHelpText>The disbursed amount, which has not yet been supervised.</inlineHelpText>
        <label>Uncleared Disbursal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Repayment_Amount__c</fullName>
        <description>The repaid amount, which has not yet been supervised.</description>
        <inlineHelpText>The reapaid amount, which has not yet been supervised.</inlineHelpText>
        <label>Uncleared Repayment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uncleared_Written_Off_Amount__c</fullName>
        <label>Uncleared Written Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Write_off_Tolerance_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Write off Tolerance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Loan_Product_Name__c</columns>
        <columns>Loan_Amount__c</columns>
        <columns>Loan_Status__c</columns>
        <columns>Interest_Accrued_Not_Due__c</columns>
        <columns>Is_Rescheduled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LAI-{00000000}</displayFormat>
        <label>Loan Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE000000042AQMAY_00NE0000003aAzgMAE</fullName>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <errorMessage>The selected Loan Account is not valid. Please check its status.</errorMessage>
        <field>Teller_Cash_Transaction__c.Loan_Account__c</field>
        <filterItems>
            <field>Loan_Account__c.Loan_Status__c</field>
            <operation>equals</operation>
            <value>Active - Good Standing</value>
        </filterItems>
        <filterItems>
            <field>Loan_Account__c.Loan_Status__c</field>
            <operation>equals</operation>
            <value>Active - Bad Standing</value>
        </filterItems>
        <filterItems>
            <field>Loan_Account__c.Loan_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <filterItems>
            <field>Loan_Account__c.Loan_Status__c</field>
            <operation>equals</operation>
            <value>Disbursed to LO</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Teller Cash Transaction_Loan Account</name>
    </namedFilters>
    <pluralLabel>Loan Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Application_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Application_Date__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Application Date cannot be greater than calendar date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Center_Loan_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c  , &apos;Center-Group-Client&apos;),
 OR(
         ISBLANK( Client__r.Center__c ) , 
         ISBLANK( Client__r.Group__c ) 
  )
)</errorConditionFormula>
        <errorMessage>The Loan Product is of type &apos;Center-Group-Client (Center Loan)&apos;.  Client must be associated with a Center and a Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Branch</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;)), 
 NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c), 
Branch__c !=  Client__r.Office__c
),
AND(
NOT(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;)), 
 $Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c, 
Branch__c !=   Account__r.Branch__c
),
AND(
ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;), 
Branch__c !=  Group__r.Office__c
)
)</errorConditionFormula>
        <errorMessage>You cannot create a loan application for a client/group who doesn&apos;t belong to this branch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Group_Loan_Product</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;),
ISBLANK( Group__c) 
)</errorConditionFormula>
        <errorMessage>This is a Group loan. You must specify a group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Individual_Loan_Product</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;)),
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c), 
ISBLANK( Client__c) 
),
AND(
NOT(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;)),
$Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c, 
ISBLANK(  Account__c ) 
)
)</errorConditionFormula>
        <errorMessage>This is an individual loan. You must specify a client.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Top_Up_Loan</fullName>
        <active>true</active>
        <errorConditionFormula>Loan_Product_Name__r.Is_Sub_Product__c == true &amp;&amp;   ISPICKVAL(Loan_Product_Name__r.Parent_Loan_Product__r.Status__c, &apos;Inactive&apos;)</errorConditionFormula>
        <errorMessage>Top up loan&apos;s parent must be active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Coaplicant_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c) 
,
OR(
        ( NOT(ISBLANK(Co_Applicant__c)) &amp;&amp; NOT(ISBLANK(Client__c )) &amp;&amp; Co_Applicant__c =  Client__c ),
        ( NOT(ISBLANK(Guarantor__c )) &amp;&amp; NOT(ISBLANK(Co_Applicant__c )) &amp;&amp; Co_Applicant__c =  Guarantor__c )
       )
)</errorConditionFormula>
        <errorDisplayField>Co_Applicant__c</errorDisplayField>
        <errorMessage>Co-applicant can not be same as Client or Guarantor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Client_Guarantor</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c)
,OR(
         (  NOT(ISBLANK(Guarantor__c )) &amp;&amp; NOT(ISBLANK(Client__c ))  &amp;&amp; Guarantor__c =  Client__c ),
         (NOT(ISBLANK(Guarantor__c )) &amp;&amp; NOT(ISBLANK(Co_Applicant__c ))  &amp;&amp; Guarantor__c =  Co_Applicant__c )
      )
)</errorConditionFormula>
        <errorDisplayField>Guarantor__c</errorDisplayField>
        <errorMessage>Guarantor can not be same as Client or Co-applicant.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Clients_Status_check</fullName>
        <active>true</active>
        <description>Client&apos;s_Status_check</description>
        <errorConditionFormula>OR(
AND(
NOT( ISPICKVAL(Loan_Product_Name__r.Loan_Product_Type__c,&quot;Group&quot;)),
NOT( $Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c ),
NOT( ISPICKVAL(Client__r.Status__c, &quot;Active&quot;))
),
AND(
NOT( ISPICKVAL(Loan_Product_Name__r.Loan_Product_Type__c,&quot;Group&quot;)),
 $Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c ,
NOT( ISPICKVAL(Account__r.Active__c, &quot;Yes&quot;))
)
)</errorConditionFormula>
        <errorMessage>The client account is not active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Closed_Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Close Date cant not be greater than System date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expected_Disbursal_Date_check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISCHANGED(Expected_Disbursal_Date__c), Expected_Disbursal_Date__c &lt;   Branch__r.Current_System_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Disbursal_Date__c</errorDisplayField>
        <errorMessage>Expected Disbursal Date cannot be less than current system date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Group_Loan_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group-Client&apos;),
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c),
NOT(ISBLANK( Client__r.Center__c ))
),
AND(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group-Client&apos;),
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c),
ISBLANK( Client__r.Group__c ) )
)</errorConditionFormula>
        <errorMessage>The Loan Product is of type &apos;Group-Client (Group Loan)&apos;.  Client must not have a Center. Client must have a Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Individual_Loan_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c  , &apos;Client&apos;),
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c),
OR(
NOT(ISBLANK( Client__r.Center__c)),
NOT(ISBLANK( Client__r.Group__c))
)
)</errorConditionFormula>
        <errorMessage>The Loan Product is of type &apos;Client (Individual Loan)&apos;. Client must not be associated with a Group or a Center.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interest_Only_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Interest_Calculation_Method__c  , &apos;Interest Only&apos;),
 ISBLANK(Interest_Only_Period__c) 
)</errorConditionFormula>
        <errorMessage>&apos;Interest Only Period&apos; cannot be blank for an &apos;Interest Only&apos; loan product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interest_Only_Product_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(  Loan_Product_Name__r.Interest_Calculation_Method__c  , &apos;Interest Only&apos;),
 ISBLANK(Interest_Only_Period__c) 
)</errorConditionFormula>
        <errorMessage>&apos;Interest Only Period&apos; cannot be blank for an &apos;Interest Only&apos; loan product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interest_Rate_Boundary_Check</fullName>
        <active>true</active>
        <description>Interest Rate Boundary Check</description>
        <errorConditionFormula>AND(ISPICKVAL(Loan_Product_Name__r.Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),(Interest_Rate__c &gt; Loan_Product_Name__r.Max_Interest_Rate__c 
 || 
 Interest_Rate__c &lt; Loan_Product_Name__r.Min_Interest_Rate__c))</errorConditionFormula>
        <errorDisplayField>Interest_Rate__c</errorDisplayField>
        <errorMessage>The Interest Rate should fall between the Limits specified in the Loan Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Loan_Amount_Boundary_Check</fullName>
        <active>true</active>
        <description>Loan_Amount_Boundary_Check</description>
        <errorConditionFormula>AND(ISPICKVAL(Loan_Product_Name__r.Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;), ( Loan_Amount__c &gt;  Loan_Product_Name__r.Max_Loan_Amount__c 
 || 
 Loan_Amount__c &lt;  Loan_Product_Name__r.Min_Loan_Amount__c ))</errorConditionFormula>
        <errorDisplayField>Loan_Amount__c</errorDisplayField>
        <errorMessage>The Loan Amount should fall between the Limits specified in the Loan Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meeting_Schedule_Check</fullName>
        <active>true</active>
        <description>Check Meeting Schedule of Group</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( Loan_Product_Name__r.Loan_Product_Type__c , &apos;Group&apos;)),
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c),
OR(
AND ( Repayment_Tied_to_Meeting_Schedule__c ,
ISBLANK( Client__r.Group__c ),
ISBLANK( Client__r.Center__c )
)
,
AND ( Repayment_Tied_to_Meeting_Schedule__c ,
NOT($Setup.Org_Parameters__c.Integrate_Salesforce_CRM__c),
ISBLANK( Client__r.Group__r.Meeting_Schedule__c ),
ISBLANK( Client__r.Center__r.Meeting_Schedule__c )
)
)
)</errorConditionFormula>
        <errorMessage>Client&apos;s group or center does not have a meeting schedule. Or Client is not associated with a Center or a Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_of_Installments_Boundary_Check</fullName>
        <active>true</active>
        <description>No_of_Installments_Boundary_Check</description>
        <errorConditionFormula>AND(ISPICKVAL(Loan_Product_Name__r.Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),(  Number_of_Installments__c  &gt;  Loan_Product_Name__r.Max_Number_of_Installments__c 
 || 
  Number_of_Installments__c  &lt;   Loan_Product_Name__r.Min_Number_of_Installments__c ))</errorConditionFormula>
        <errorDisplayField>Number_of_Installments__c</errorDisplayField>
        <errorMessage>The No. of Installments should fall between the Limits specified in the Loan Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Overdue_Interest_Rate_Boundary_Check</fullName>
        <active>true</active>
        <description>Interest Rate Boundary Check</description>
        <errorConditionFormula>AND(ISPICKVAL(Loan_Product_Name__r.Loan_Cycle_Setup__c, &apos;Same for all Loans&apos;),(Overdue_Interest_Rate__c &gt; Loan_Product_Name__r.Max_Overdue_Interest_Rate__c 
 || 
 Overdue_Interest_Rate__c &lt; Loan_Product_Name__r.Min_Overdue_Interest_Rate__c))</errorConditionFormula>
        <errorDisplayField>Overdue_Interest_Rate__c</errorDisplayField>
        <errorMessage>The Overdue Interest Rate should fall between the Limits specified in the Loan Product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Repayment_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISNULL( Expected_Repayment_Start_Date__c ) )
&amp;&amp;
Expected_Repayment_Start_Date__c &lt;=
Expected_Disbursal_Date__c</errorConditionFormula>
        <errorMessage>The Expected Repayment Start Date must not be before the Expected Disbursal Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Expected_Repayment_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(Expected_Repayment_Start_Date__c)) ,
Expected_Repayment_Start_Date__c &lt;   Branch__r.Current_System_Date__c ,
 ISNEW()  )</errorConditionFormula>
        <errorMessage>Expected repayment start date cannot be less than current system date.</errorMessage>
    </validationRules>
</CustomObject>